// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyControlStyleTest ControlStyleTestWithRegularBorder #2 1`] = `
{
  "AutomationId": "control-style-switch-view",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 180,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 800,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Switch",
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 51,
      "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
      "children": [
        {
          "Background": "#33E1E1E1",
          "BorderBrush": "#55FF00FF",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Left",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Top",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": [
                {
                  "Background": "#00FFFFFF",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,5,0,5",
                  "Name": "SwitchAreaGrid",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OffContentPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OnContentPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OuterBorder",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnobBounds",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnob",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 20,
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": [
                    {
                      "Background": "#FF0000FF",
                      "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "7,7,7,7",
                      "FlowDirection": "LeftToRight",
                      "Height": 12,
                      "HorizontalAlignment": "Center",
                      "Left": 0,
                      "Margin": "0,0,1,0",
                      "Name": "SwitchKnobOn",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 12,
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                    },
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 12,
                      "HorizontalAlignment": "Center",
                      "Left": 0,
                      "Margin": "-1,0,0,0",
                      "Name": "SwitchKnobOff",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 12,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
                {
                  "Background": "#33000000",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchThumb",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Text": "",
      "Top": 60,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.TextBox",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "TextBox",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Top": 120,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.PasswordBox",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "Password",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`LegacyControlStyleTest ControlStyleTestWithRegularBorder 1`] = `
{
  "AutomationId": "control-style-switch-view",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 180,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 800,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Switch",
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 51,
      "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
      "children": [
        {
          "Background": "#33E1E1E1",
          "BorderBrush": "#55FF00FF",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Left",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Top",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": [
                {
                  "Background": "#00FFFFFF",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,5,0,5",
                  "Name": "SwitchAreaGrid",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OffContentPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OnContentPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OuterBorder",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnobBounds",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnob",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 20,
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": [
                    {
                      "Background": "#FF0000FF",
                      "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "7,7,7,7",
                      "FlowDirection": "LeftToRight",
                      "Height": 12,
                      "HorizontalAlignment": "Center",
                      "Left": 0,
                      "Margin": "0,0,1,0",
                      "Name": "SwitchKnobOn",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 12,
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                    },
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 12,
                      "HorizontalAlignment": "Center",
                      "Left": 0,
                      "Margin": "-1,0,0,0",
                      "Name": "SwitchKnobOff",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 12,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
                {
                  "Background": "#33000000",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchThumb",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Text": "",
      "Top": 60,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.TextBox",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "TextBox",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Top": 120,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.PasswordBox",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "Password",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`LegacyControlStyleTest ControlStyleTestWithRoundBorder 1`] = `
{
  "AutomationId": "control-style-switch-view",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 180,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 800,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Switch",
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 51,
      "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
      "children": [
        {
          "Background": "#33000000",
          "BorderBrush": "#5500FF00",
          "BorderThickness": "10,10,10,10",
          "Clip": null,
          "CornerRadius": "10,10,10,10",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Left",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Top",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": [
                {
                  "Background": "#00FFFFFF",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "10,10,10,10",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,5,0,5",
                  "Name": "SwitchAreaGrid",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OffContentPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OnContentPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "OuterBorder",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnobBounds",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnob",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 20,
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": [
                    {
                      "Background": "#FF0000FF",
                      "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "7,7,7,7",
                      "FlowDirection": "LeftToRight",
                      "Height": 12,
                      "HorizontalAlignment": "Center",
                      "Left": 0,
                      "Margin": "0,0,1,0",
                      "Name": "SwitchKnobOn",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 12,
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                    },
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 12,
                      "HorizontalAlignment": "Center",
                      "Left": 0,
                      "Margin": "-1,0,0,0",
                      "Name": "SwitchKnobOff",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 12,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
                {
                  "Background": "#33000000",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "SwitchThumb",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Text": "",
      "Top": 60,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.TextBox",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": "#33000000",
              "BorderBrush": "#5500FF00",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "10,10,10,10",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "10,10,10,10",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "TextBox",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Top": 120,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.PasswordBox",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": [
            {
              "Background": "#33000000",
              "BorderBrush": "#5500FF00",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "10,10,10,10",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": [
                    {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "10,10,10,10",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "Password",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
  ],
}
`;
